fixed display of home page (green arrow etc…) on tablets

--- a/app/assets/stylesheets/signed_in_header.css.scss
+++ b/app/assets/stylesheets/signed_in_header.css.scss
@@ -130,19 +130,16 @@
     #address_book {
       font-size: 26px
     }
-
   }
-
-   .fb-like {
- }
-
-
-
 }
 
 /* this is for displaying the 'Go' button next to the search box */
 .form-inline div {
-display: inline-block;
-margin-top: 5px;
-/* margin-right: -10px; */
+  display: inline-block;
+  margin-top: 5px;
+  /* margin-right: -10px; */
  }
+.your_page_infos{
+  margin-top: 60px;
+  .span4.image_div{text-align: center;}
+}
